# yq

./: .buildinfo  .gitignore  .travis.yml  AGENTS.md  Changes.rst  MANIFEST.in  Makefile  README.rst  SECURITY.md  changelog.html  common.mk  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py
.doctrees/: changelog.doctree  environment.pickle  index.doctree
.github/: FUNDING.yml
.github/workflows/: ci.yml  pythonpackage.yml  release.yml
_static/: pygments.css
ddbcli/: __init__.py
docs/: Makefile  changelog.rst  cli-doc-tomlq.txt  cli-doc-xq.txt  cli-doc.txt  conf.py  index.rst  toc.html
scripts/: ddb  xq  yq
test/: cfn.yml  doc.yml  test.py
yq/: __init__.py  __main__.py  colorize.py  compat.py  dumper.py  loader.py  parser.py  toml_support.py  yaml_support.py
yq/tomlq/: __main__.py
yq/xq/: __main__.py
